--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -2,24 +2,26 @@
 <header class="Header-container">
   <div class="container">
     <div class="row Header-containerAlignV">
-      <div class="col-xs-5 col-md-8 ">
+      <div class="col-xs-3 col-md-6 ">
         <a ui-sref="main">Social Soccer</a>
       </div>
+        <a ui-sref="profile"><img ng-if="nav.authService.isAuthenticated()" class="img-resposive img-circle hidden-xs"  ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/>
+      </a>
+      <div class="col-xs-6 col-md-push-3  ">
+        <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class="btn btn-danger hidden-xs hidden-sm   col-md-push-2 Usuario">Cerrar Sesion</md-button>
+        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success col-xs-8    Usuario-2">
+          {{nav.authService.username() }} </md-button>
 
-      <div class="col-xs-10 col-md-10 col-lg-10 ">
+          <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary hidden-md hidden-sm">Iniciar Sesión</md-button>
+        </div>
+      <div class="col-xs-5 col-md-10 col-lg-10  ">
         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navMenu" >
-          <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary">Iniciar Sesión</md-button>
-          <i class="fa fa-bars" aria-hidden="true"></i>
+          <i class="fa fa-bars " aria-hidden="true"></i>
         </button>
-        <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="users-create" class="btn btn-warning hidden-xs col-sm-pull-2 ">Registrarse</md-button>
-        <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="btn btn-primary hidden-xs ">Iniciar Sesión</md-button>
-        <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success col-xs-5 col-sm-4 col-md-4 col-lg-4 col-md-push-3  Usuario-2">
-            {{nav.authService.username() }} </md-button>
-       <md-button name="button" type="button" ng-if="nav.authService.isAuthenticated()" ng-click="!nav.authService.logout()" ui-sref="main" class="btn btn-danger hidden-xs hidden-sm  col-sm-pull-3 col-md-push-3  Usuario">Cerrar Sesion</md-button>
-
-  <img src="" alt=""  ng-src="../../assets/images/Photos/{{nav.$auth.getPayload().avatar}}"/>
-</div>
-    </div>
+      </div>
+      <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="btn btn-primary col-xs-1 col-sm-10  col-md-10   hidden-xs  ">Iniciar Sesión</md-button>
+      <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="users-create" class="btn btn-warning hidden-xs col-md-10  col-sm-10 ">Registrarse</md-button>
+        </div>
   </div>
 </header>
 <!--/header-->
