--- a/client/components/navbar/navbar.styl
+++ b/client/components/navbar/navbar.styl
@@ -10,6 +10,8 @@
   background: rgba(17, 24, 31, 0.9)
 
   color white
+
+
 .Home
   text-transform uppercase
   color white
@@ -57,6 +59,10 @@ button
   font-size: 25px;
 .Enlace
   color black
+.navbar-toggle
+  margin-right 0 !important
+.img-circle
+  width 45px
 @media (min-width: 1200px)
   .col-lg-10 {
     width: 28%;
@@ -66,4 +72,3 @@ button
   .col-md-10 {
      width: 33%;
      }
-    
