--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -12,7 +12,7 @@
         <md-button ui-sref="profile" ng-if="nav.authService.isAuthenticated()" class=" btn btn-success col-xs-3 col-md-push-8    Usuario-2">
           {{nav.authService.username() }} </md-button>
 
-          <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary hidden-md hidden-sm">Iniciar Sesión</md-button>
+          <md-button ng-if="!nav.authService.isAuthenticated()" ui-sref="login" class="button btn btn-primary hidden-md hidden-sm hidden-lg">Iniciar Sesión</md-button>
         </div>
       <div class="col-xs-5 col-md-10 col-lg-10  ">
         <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navMenu" >
@@ -57,6 +57,10 @@
             <li>
             <a ui-sref="reservations-list"  ng-if="nav.authService.isOwner()" name="page4">
               Mis reservas</a>
+            </li>
+            <li>
+            <a ui-sref="reservations"  ng-if="nav.authService.isAuthenticated()" name="page5">
+              Reservar</a>
             </li>
           </ul>
         </div>
