--- a/client/app/reservations/reservations.styl
+++ b/client/app/reservations/reservations.styl
@@ -7,4 +7,16 @@ md-datepicker
   padding 0 !important
 
 .layout-row > .flex-45
-  background white !important
+  background-color white !important
+
+.reloj
+  font-size 25px
+.caja
+  padding-right 40px
+
+.control
+  font-size 25px
+  padding 20px
+
+.input-group .form-control
+  padding-top  40px
