--- a/client/app/users/users-create/users-create.styl
+++ b/client/app/users/users-create/users-create.styl
@@ -26,7 +26,10 @@
   padding-left 11px
   border-right-width 1px
 
-md-input-container.md-icon-left 
+md-input-container.md-icon-left
   padding-left: 30px;
   padding-right: 0;
   margin-left: -11px;
+
+md-input-container > md-icon  
+  left: -1px;
